--- a/app/src/main/res/layout/fragment_person_recommend_work_item_detail.xml
+++ b/app/src/main/res/layout/fragment_person_recommend_work_item_detail.xml
@@ -76,7 +76,8 @@
                     android:paddingStart="@dimen/phone_apadding"
                     android:paddingEnd="@dimen/phone_apadding"
                     android:layout_width="match_parent"
-                    android:divider="@null"
+                    android:divider="@android:color/white"
+                    android:dividerHeight="@dimen/dp2"
                     android:layout_height="wrap_content"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
