--- a/app/src/main/res/layout/voice_collect_item.xml
+++ b/app/src/main/res/layout/voice_collect_item.xml
@@ -7,9 +7,10 @@
     android:layout_marginBottom="@dimen/phone_apadding"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/head_icon"
+        android:layout_width="@dimen/phone_head_length"
+        android:layout_height="@dimen/phone_head_length"
+        android:id="@+id/headIconImg"
+        android:scaleType="fitXY"
         android:background="@drawable/circle_bg"
         android:src="@drawable/head"
         android:layout_alignParentTop="true"
@@ -24,7 +25,7 @@
         android:textColor="@android:color/black"
         android:id="@+id/name_tv"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/head_icon" />
+        android:layout_toEndOf="@+id/headIconImg" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,7 +33,7 @@
         android:text="Small Text"
         android:id="@+id/label_tv"
         android:layout_below="@+id/name_tv"
-        android:layout_toEndOf="@+id/head_icon" />
+        android:layout_toEndOf="@+id/headIconImg" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,8 +49,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:layout_below="@+id/head_icon"
-        android:layout_alignStart="@+id/head_icon"
+        android:layout_below="@+id/headIconImg"
+        android:layout_alignStart="@+id/headIconImg"
         android:layout_alignEnd="@+id/date_tv"
         android:paddingEnd="@dimen/phone_apadding"
         android:layout_marginBottom="@dimen/phone_apadding"
