--- a/app/src/main/res/layout/fragment_person_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_person_ask_detail.xml
@@ -14,7 +14,7 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/myScrollView"
+                android:id="@+id/mScrollView"
                 android:layout_alignParentTop="true"
                 >
                 <LinearLayout
@@ -48,7 +48,8 @@
                         android:paddingStart="@dimen/phone_apadding"
                         android:paddingEnd="@dimen/phone_apadding"
                         android:layout_width="match_parent"
-                        android:divider="@null"
+                        android:divider="@android:color/white"
+                        android:dividerHeight="@dimen/dp2"
                         android:layout_height="wrap_content"/>
                     <LinearLayout
                         android:layout_width="match_parent"
