--- a/app/src/main/res/layout/fragment_person_circle_detail.xml
+++ b/app/src/main/res/layout/fragment_person_circle_detail.xml
@@ -13,92 +13,110 @@
             android:orientation="vertical"
             android:background="@android:color/white"
             android:id="@+id/fragment_person_circle_detail_main_layout"
-            xmlns:android="http://schemas.android.com/apk/res/android">
+            >
             <ScrollView
                 android:layout_width="match_parent"
                 android:id="@+id/fragment_person_circle_detail_scrollview"
                 android:layout_height="match_parent">
                 <LinearLayout
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:padding="@dimen/phone_apadding"
-                    android:layout_height="wrap_content"
-                    >
-                    <ImageView
-                        android:id="@+id/headIconImg"
-                        android:layout_width="@dimen/phone_head_length"
-                        android:scaleType="fitXY"
-                        android:background="@drawable/head"
-                        android:layout_height="@dimen/phone_head_length"
-                        />
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
                     <LinearLayout
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:paddingStart="@dimen/phone_apadding"
-                        android:layout_height="wrap_content">
+                        android:padding="@dimen/phone_apadding"
+                        android:layout_height="wrap_content"
+                        >
+                        <ImageView
+                            android:id="@+id/headIconImg"
+                            android:layout_width="@dimen/phone_head_length"
+                            android:scaleType="fitXY"
+                            android:background="@drawable/head"
+                            android:layout_height="@dimen/phone_head_length"
+                            />
                         <LinearLayout
+                            android:orientation="vertical"
                             android:layout_width="match_parent"
-                            android:orientation="horizontal"
+                            android:paddingStart="@dimen/phone_apadding"
                             android:layout_height="wrap_content">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:orientation="horizontal"
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/school_friend_item_name_text"
+                                    android:textAppearance="?android:attr/textAppearanceMedium"
+                                    android:textColor="@color/light_blue"
+                                    android:layout_gravity="center_horizontal" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/school_friend_item_label_text"
+                                    android:paddingStart="10dp"
+                                    android:layout_gravity="bottom"
+                                    />
+                            </LinearLayout>
+                            <com.nju.View.SchoolFriendTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/phone_apadding"
+                                android:textColor="@android:color/black"
+                                android:id="@+id/school_friend_item_content"
+                                />
+                            <com.nju.View.SchoolFriendGridView
+                                android:id="@+id/picsGridview"
+                                android:paddingTop="@dimen/FIVE_DP"
+                                android:layout_width="match_parent"
+                                android:numColumns="3"
+                                android:verticalSpacing="@dimen/FIVE_DP"
+                                android:layout_height="wrap_content"/>
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/school_friend_item_name_text"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
                                 android:textColor="@color/light_blue"
-                                android:layout_gravity="center_horizontal" />
+                                android:id="@+id/locationTV"
+                                />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/school_friend_item_label_text"
-                                android:paddingStart="10dp"
-                                android:layout_gravity="bottom"
+                                android:textColor="@color/light_blue"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:id="@+id/deleteTv" />
+
+                            <com.nju.View.SchoolFriendAweTextView
+                                android:layout_width="@dimen/dp22"
+                                android:layout_height="@dimen/dp22"
+                                android:textSize="@dimen/sp22"
+                                android:textColor="@color/light_blue"
+                                android:id="@+id/comment_icon_tv"
+                                android:text="@string/write_comment_icon"
+                                android:layout_gravity="end" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="11"
+                                android:layout_marginTop="@dimen/_dp22"
+                                android:id="@+id/school_friend_item_publish_date"
                                 />
                         </LinearLayout>
-                        <com.nju.View.SchoolFriendTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/phone_apadding"
-                            android:textColor="@android:color/black"
-                            android:id="@+id/school_friend_item_content"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@android:color/holo_blue_dark"
-                            android:id="@+id/school_friend_item_publish_location"
-                            />
-
-                        <com.nju.View.SchoolFriendAweTextView
-                            android:layout_width="@dimen/dp22"
-                            android:layout_height="@dimen/dp22"
-                            android:textSize="@dimen/sp22"
-                            android:textColor="@color/light_blue"
-                            android:id="@+id/comment_icon_tv"
-                            android:text="@string/write_comment_icon"
-                            android:layout_gravity="end" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="11"
-                            android:layout_marginTop="@dimen/_dp22"
-                            android:id="@+id/school_friend_item_publish_date"
-                            />
-
-                        <com.nju.View.NonScrollableListView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="#F5F5F5"
-                            android:divider="@null"
-                            android:dividerHeight="0dp"
-                            android:id="@+id/school_friend_item_listView"
-                            />
                     </LinearLayout>
+                    <com.nju.View.NonScrollableListView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/light_gray"
+                        android:headerDividersEnabled="true"
+                        android:layout_marginBottom="@dimen/margin_bottom"
+                        android:layout_marginStart="@dimen/phone_apadding"
+                        android:layout_marginEnd="@dimen/phone_apadding"
+                        android:id="@+id/mListview"
+                        />
                 </LinearLayout>
             </ScrollView>
-
         </LinearLayout>
     </FrameLayout>
     <include layout="@layout/comment_input"/>
