--- a/app/src/main/res/layout/fragment_recommend_work_item.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:background="@android:color/white"
-    android:layout_height="match_parent" tools:context="com.nju.fragment.RecommendWorkItem">
+    android:layout_height="match_parent" tools:context="com.nju.fragment.RecommendWorkItemFragment">
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
