--- a/app/src/main/res/layout/head_img.xml
+++ b/app/src/main/res/layout/head_img.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView
-    android:layout_width="30dp"
-    android:layout_height="30dp"
+    android:layout_width="@dimen/dp30"
+    android:layout_height="@dimen/dp30"
+    android:layout_marginBottom="@dimen/dp5"
+    android:layout_marginTop="@dimen/dp5"
     android:scaleType="fitXY"
     xmlns:android="http://schemas.android.com/apk/res/android" />
