--- a/app/src/main/res/layout/fragment_circle.xml
+++ b/app/src/main/res/layout/fragment_circle.xml
@@ -3,13 +3,17 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <android.support.v4.view.ViewPager
-        android:layout_alignParentTop="true"
-        android:id="@+id/viewpager"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
-    <include layout="@layout/circle_tool_bar" android:layout_alignParentBottom="true"
-        android:layout_height="@dimen/phone_item_height"
-        android:layout_width="match_parent" />
+        android:layout_alignParentTop="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/mContainer"
+            android:layout_height="match_parent"/>
+        <include layout="@layout/hand_touch_bn"/>
+    </FrameLayout>
+
+    <include layout="@layout/circle_tool_bar" />
 </RelativeLayout>
