--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,4 +33,5 @@
     <dimen name="dp5">5dp</dimen>
     <dimen name="margin_bottom">150dp</dimen>
     <dimen name="dp2">2dp</dimen>
+    <dimen name="dp80">80dp</dimen>
 </resources>
