--- a/app/src/main/res/layout/fragment_major_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_major_ask_detail.xml
@@ -23,7 +23,7 @@
                     android:orientation="vertical"
                     android:paddingBottom="350dp"
                     android:layout_height="wrap_content"
-                     >
+                    >
                     <com.nju.View.SchoolFriendTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -53,11 +53,10 @@
                         android:dividerHeight="@dimen/phone_apadding"
                         android:id="@+id/listView"
                         android:layout_height="wrap_content"/>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
-                        android:paddingTop="@dimen/phone_apadding"
-                        android:paddingBottom="@dimen/phone_apadding"
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
@@ -97,6 +96,28 @@
                             android:id="@+id/date_tv"
                             />
                     </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:paddingBottom="@dimen/phone_apadding"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:paddingEnd="@dimen/phone_apadding"
+                            android:text="0"
+                            android:id="@+id/replayNumberTV"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:text="@string/replay"
+                            android:layout_alignParentTop="true"
+                            android:layout_toStartOf="@+id/replayNumberTV" />
+                    </RelativeLayout>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/padding_left"
