--- a/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
+++ b/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/phone_apadding"
                 android:paddingBottom="300dp"
-                >
+                 >
                 <ImageView
                     android:layout_width="@dimen/phone_head_length"
                     android:layout_height="@dimen/phone_head_length"
@@ -62,15 +62,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/phone_apadding"
-                    android:paddingStart="@dimen/phone_apadding"
+                    android:paddingBottom="@dimen/padding_left"
                     android:paddingEnd="@dimen/phone_apadding"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:layout_marginBottom="@dimen/padding_left"
                     android:id="@+id/alumni_vo_date"
-                    android:text="1"
-                    android:layout_below="@+id/listView"
-                    android:layout_alignStart="@+id/listView" />
+                    android:text="111"
+                    android:layout_below="@+id/linearLayout2"
+                    android:layout_alignStart="@+id/linearLayout2" />
                 <com.nju.View.SchoolFriendTextView
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -91,15 +89,28 @@
                     android:dividerHeight="@dimen/dp2"
                     android:layout_below="@+id/alumni_vo_desc"
                     android:layout_height="wrap_content"/>
-                <LinearLayout
+                <RelativeLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="@dimen/phone_apadding"
+                    android:layout_height="wrap_content"
                     android:id="@+id/linearLayout2"
+                    android:layout_marginEnd="@dimen/phone_apadding"
                     android:layout_below="@+id/listView"
-                    android:layout_alignStart="@+id/alumni_vo_date" />
+                    android:layout_alignStart="@+id/alumni_vo_imageView">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:id="@+id/labelTV" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:id="@+id/whoScanTV"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true" />
+                </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/padding_left"
@@ -135,7 +146,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/comment_str"
                     android:id="@+id/textView37"
-                    android:layout_alignBottom="@+id/alumni_vo_date"
+                    android:layout_alignTop="@+id/praise_number_tv"
                     android:layout_toStartOf="@+id/comment_number_tv" />
 
                 <TextView
@@ -143,9 +154,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="0"
-                    android:layout_marginEnd="@dimen/phone_apadding"
                     android:id="@+id/praise_number_tv"
-                    android:layout_alignTop="@+id/textView37"
+                    android:layout_below="@+id/linearLayout2"
                     android:layout_toStartOf="@+id/textView37" />
 
                 <TextView
@@ -154,7 +164,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/praise_str"
                     android:id="@+id/textView39"
-                    android:layout_alignTop="@+id/praise_number_tv"
+                    android:layout_alignTop="@+id/alumni_vo_date"
                     android:layout_toStartOf="@+id/praise_number_tv" />
             </RelativeLayout>
 
