--- a/app/src/main/res/layout/fragment_person_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_person_ask_detail.xml
@@ -55,7 +55,31 @@
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
                         android:paddingTop="@dimen/phone_apadding"
-                        android:paddingBottom="@dimen/phone_apadding"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textColor="@android:color/black"
+                            android:paddingStart="@dimen/phone_apadding"
+                            android:paddingEnd="@dimen/phone_apadding"
+                            android:id="@+id/labelTV"
+                            />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:gravity="end"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:paddingStart="@dimen/phone_apadding"
+                            android:paddingEnd="@dimen/phone_apadding"
+                            android:id="@+id/closedTV"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingTop="@dimen/phone_apadding"
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
@@ -86,6 +110,28 @@
                             android:id="@+id/date_tv"
                             />
                     </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:paddingBottom="@dimen/phone_apadding"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:paddingEnd="@dimen/phone_apadding"
+                            android:text="0"
+                            android:id="@+id/replayNumberTV"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:text="@string/replay"
+                            android:layout_alignParentTop="true"
+                            android:layout_toStartOf="@+id/replayNumberTV" />
+                    </RelativeLayout>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/padding_left"
