--- a/app/src/main/res/layout/fragment_person_circle_detail_pic.xml
+++ b/app/src/main/res/layout/fragment_person_circle_detail_pic.xml
@@ -1,7 +1,6 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
@@ -11,7 +10,6 @@
         />
     <LinearLayout
         android:layout_width="match_parent"
-
         android:background="@android:color/transparent"
         android:layout_above="@+id/fragment_person_circle_detail_pic_comment_layout"
         android:layout_height="wrap_content"
@@ -46,7 +44,7 @@
                 android:layout_marginStart="@dimen/phone_apadding"
                 android:text="@string/praise_icon"
                 android:textColor="@android:color/white"
-                android:id="@+id/textView8"
+                android:id="@+id/praiseIconTV"
                 android:textStyle="bold"
                 />
             <TextView
