--- a/app/src/main/res/layout/head_img.xml
+++ b/app/src/main/res/layout/head_img.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<com.nju.View.CircleImageView
     android:layout_width="@dimen/dp30"
     android:layout_height="@dimen/dp30"
     android:layout_marginBottom="@dimen/dp5"
